# automate-davinci-resolve

./: README.md  mkdocs.yml  pyproject.toml  requirements.doc.txt  setup.py  tox.ini  versions.json
.github/actions/doc-setup/: action.yml
.github/workflows/: doc-delete.yml  doc-deploy.yml  test.yml
dev_utils/: link_dev_files.py  regenerate_macro_input_index.py
docs/: index.md
docs/features/: unitext-plus.md
docs/getting-started/: installation.md  requirement.md
pr-27/: 404.html  index.html
pr-27/features/effect-control/: index.html
pr-27/features/unitext-plus/: index.html
pr-27/getting-started/first-steps/: index.html
pr-27/getting-started/installation/: index.html
pr-27/getting-started/requirement/: index.html
pr-27/search/: search_index.json
src/davinci_resolve_smart_edit/data/: Effect Control.setting  ReplicaText+.setting  Smart Edit.py  smart_edit.drb
src/davinci_resolve_smart_edit/entrypoints/: effect_control_clip.py  module_utils.py  replica_textplus_clip.py  scripts.py
src/davinci_resolve_smart_edit/extended_resolve/: folder.py  media_pool.py  media_pool_item.py  resolve.py  textplus.py  timecode.py  timeline.py  timeline_item.py
src/davinci_resolve_smart_edit/smart_edit/: constants.py  effect_control.py  replica_textplus.py  smart_edit_bin.py
src/davinci_resolve_smart_edit/utils/: log.py  math.py
src/dvr_smart_edit/: resolve_types.py
src/dvr_smart_edit/data/: EffectControl.setting  SmartEdit.py  UniText+.setting
src/dvr_smart_edit/entrypoints/: __init__.py  adjust_fusion_clip.py  scripts.py  (+4 more)
test/: test_smart_textplus.py
(+24 files in other folders)
