[project]
name = "davinci_resolve_smart_edit"
description = "Davinci Resolve plugin to automate editing"
readme = "README.md"
authors = [{name = "xyzjoey"}]
dynamic = ["version"]
requires-python = ">= 3.9"
dependencies = [
    "srt~=3.5.3"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
